--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
 </head>
-<body style="background-image: url('../harry.jpg')>
+<body style="background-image: url('../harry.jpg')">
     <h1>Formulario</h1>
    <form action="/enviar" method="post" >
     
